working versionn deployed on aws

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,9 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
+    <!-- Load configuration before the app -->
+    <script src="%PUBLIC_URL%/config.js"></script>
+    
     <!-- Material-UI Roboto Font -->
     <link
       rel="stylesheet"
